YYYY-MM-DD {
	* fix or change
	+ add
	- delete
}

2018-01-17 {
	* Fixed that when you resize the window after moving it, it will return to
		the place where it was put
	* Changed library's name on windows os in makefile
}

2018-01-10 {
	* changed callback function setting ports' style
}

2017-12-26 {
	* changed sample name from "hint" to "decoration"
	+ added decoration mouse transparent on windows
	* fixed a bug that when user call wsSetWindowCallbacks to set a display
		callback, the style WS_STYLE_STATIC_WINDOW will be ignored
	* fixed a bug that when user call wsSetWindowPos or wsSetWindowSize to
		change baseWindow's attribute, it will cause strange behavior
}

2017-12-25 {
	+ added wsSetWindowHint function
	* republished repository on GitHub
	+ added "hint" sample
	+ added wsGetGLFWWindow
	+ added WS_MOD_*
}

2017-12-13 {
	+ added a new sample
}

2017-12-12 {
	* reconfigurated makefile
	+ added static library compile option
	+ added wsFocusWindow
	+ added wsTerminate
}

2017-12-10 {
	* merged include files
	* WS_STYLE_NOBUFFERAUTORESIZE -> WS_STYLE_NO_BUFFER_RESIZE
	+ added WS_STYLE_NO_FRAMEBUFFER and WS_STYLE_NO_DEPTHBUFFER, which makes it
		easier to draw static window and 2D window
	+ added a root makefile
	* fixed a bug that when a window's ancestor is closed in his callback,
		the program will crash
}

2017-12-09 {
	* fixed a bug that when the window's size changed, the cursorMoveCallback
		rather than the windowMoveCallback will be called if windowMoveCallback
		is set
	* fixed the window focus algorithm, which will cause strange behavior when
		calling keyboard about callbacks
	+ added another example
}

2017-12-08 {
	* adjusted makefile struct
	* changed from bool to int, in order to satisfy language C
}

2017-12-07 {
	* wsGetPrecursorWindow -> wsGetPrevWindow,
	  wsGetSuccessorWindow -> wsGetNextWindow,
	  wsGetWindowUserData -> wsGetWindowData
	* moved code from VS to VS code
	* pushed onto GitHub
	+ added makefile
}

2017-09-26 {