@@ -4,6 +4,10 @@ YYYY-MM-DD {
 	- delete
 }
 
+2018-02-22 {
+	* Changed parameter order of function wsCreateWindow
+}
+
 2018-01-17 {
 	* Fixed that when you resize the window after moving it, it will return to
 		the place where it was put
